# alloy

./: .gitignore  Makefile  README.md  claude_context.sh  claude_context.txt  docker-compose.yml
backend/: .env.example  .env.test  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 266aa50a3d1c_auto_migration.py  50ae82ae8110_auto_migration.py  5364721952ea_auto_migration.py  91eccdce6819_auto_migration.py  b0ae0ff3d416_auto_migration.py  d9d895fb8872_auto_migration.py  ec353131fe0c_auto_migration.py
backend/src/: main.py
backend/src/api/v1/: __init__.py  auth.py  health.py  reports.py  utils.py
backend/src/core/: security.py  settings.py
backend/src/db/: postgresql.py
backend/src/db/models/: __init__.py  analysis.py  report.py  user.py
backend/src/services/: docling.py  pdf_generator.py  pdf_layouts.py  pdf_template.py  react_agent.py  report_generator.py  search.py
backend/src/utils/: __init__.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_auth.py  test_health.py  test_reports.py
backend/tests/core/: test_security.py
scripts/: build_push_docker.sh
web/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/auth/: AuthVisual.tsx
web/src/components/global/: Breadcrumbs.tsx  CommandPalette.tsx  DashboardGreeting.tsx  DemoReportCard.tsx  Footer.tsx  Header.tsx  Hero.tsx  Logo.tsx  PageLoader.tsx  PromptInputBox.tsx  Sidebar.tsx  UserAvatar.tsx  (+1 more)
web/src/types/: report.ts
(+15 files in other folders)
